chore: Update sdist configuration to refer project files only - chore: Add license headers in github workflow
Signed-off-by: Avishrant Sharma <avishrant.sharma@beyondirr.tech>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,14 @@ build-backend = "hatchling.build"
 [tool.hatch.version]
 path = "cas2json/__init__.py"
 
+[tool.hatch.build]
+include = [
+  "cas2json",
+  "README.md",
+  "LICENSES",
+  "pyproject.toml",
+]
+
 [tool.hatch.build.targets.wheel]
 packages = ["cas2json"]
 
